# triaige

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  TEST_PLAN.md  package.json  pnpm-lock.yaml
apps/runner/: .env.example  pyproject.toml  render.yaml
apps/runner/app/: db.py  episodic.py  events.py  grouping.py  main.py  rate_limit.py  repo_settings.py  request_context.py  schema.sql  schemas.py  settings.py  store.py
apps/runner/app/agent/: format.py  graph.py  nodes.py  prompts.py  state.py
apps/runner/app/clients/: openai_client.py  openai_validation.py
apps/runner/app/pipeline/: data_loader.py
apps/runner/app/retrieval/: qdrant_store.py  service.py
apps/runner/app/routers/: _auth.py  actions.py  health.py  repos.py  runs.py  triage.py
apps/runner/app/services/: baselines.py  issues.py  merge_lifecycle.py  triage.py
apps/runner/app/tools/: github.py  github_actions.py  github_checks.py  github_issues.py  image_diff.py  playwright_parser.py  pr_comment.py  vision.py
apps/runner/data/cases/: CASE-001.md  CASE-002.md  CASE-003.md  CASE-004.md  CASE-005.md  CASE-006.md  CASE-007.md  CASE-008.md  CASE-009.md  CASE-010.md  CASE-011.md  CASE-012.md  CASE-013.md  CASE-014.md  CASE-015.md
apps/runner/data/known_changes/: CHANGE-001.md  CHANGE-002.md  CHANGE-003.md  CHANGE-004.md  CHANGE-005.md
apps/runner/data/runbooks/: RUNBOOK-001.md  RUNBOOK-002.md  (+8 more)
apps/runner/scripts/: index_corpus.py
apps/runner/tests/: test_grouping.py  test_image_diff.py  test_playwright_parser.py  test_schemas.py
(+46 files in other folders)
